tdf#129037 add a way to select multiple entries of a ListBox together

Change-Id: I362a9e9e644e15f0dd3aeb691973a0979d17eeb0